spacing issue

--- a/static/landing/landing.css
+++ b/static/landing/landing.css
@@ -212,7 +212,7 @@
     justify-content: center;
 
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .ptop-text-mobile {
